--- a/style.css
+++ b/style.css
@@ -1,4 +1,31 @@
 body {
   margin: 20px;
+  font-family: system-ui;
+  background-image: url(https://i.ibb.co/kKncF6p/body-bg.png);
+  background-repeat-y: no-repeat;
 }
-          
+text-header {
+    color: white;
+    font-size: 350%;
+    font-weight: 400;
+    text-shadow: 0 0 20px #00ff3c;
+    filter: drop-shadow(0px 4px 2px black);
+}
+logo-header {
+    width: 100px;
+    margin: 1em;
+}
+header {
+    padding: 1px 15px;
+    max-width: 800px;
+    margin: auto;
+    height: 130px;
+    text-align: center;
+    margin-bottom: 40px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
