--- a/style.css
+++ b/style.css
@@ -4,18 +4,18 @@ body {
   background-image: url(https://i.ibb.co/kKncF6p/body-bg.png);
   background-repeat-y: no-repeat;
 }
-text-header {
+.text-header {
     color: white;
     font-size: 350%;
     font-weight: 400;
     text-shadow: 0 0 20px #00ff3c;
     filter: drop-shadow(0px 4px 2px black);
 }
-logo-header {
+.logo-header {
     width: 100px;
     margin: 1em;
 }
-header {
+.header {
     padding: 1px 15px;
     max-width: 800px;
     margin: auto;
