--- a/shinigami.css
+++ b/shinigami.css
@@ -2,19 +2,39 @@ body {
   font-family: system-ui;
   background: #3b3b3b;
   color: white;
+  margin: 0;
 }
 .header {
-  background: #e8e8e8;
-  color: #3b3b3b;
-  width: -webkit-fill-available;
-  top: 0;
-  height: 10em;
+    background: #e8e8e8;
+    color: #3b3b3b;
+    width: -webkit-fill-available;
+    top: 0;
+    height: 10em;
+    border-bottom: #0b0f8b 4px solid;
+    padding: 0.5em;
 }
 .logo {
-  max-width: 800px;
-  margin: auto;
-  display: flex;
-  align-content: center;
-  align-items: center;
+    max-width: 800px;
+    margin: auto;
+    display: flex;
+    background: no-repeat;
+    background-position: center;
+    align-content: center;
+    background-size: contain;
+    height: 10em;
+    align-items: center;
+    background-image: url(https://i.ibb.co/J3zs36y/isd-logo.png);
+    justify-content: center;
 }
-          
+
+ .logo p {
+    font-size: 200%;
+    font-weight: 800;
+    text-shadow: 0 0 5px #e8e8e8;
+    text-transform: uppercase;
+    color: #0b0f8b;
+    filter: drop-shadow(0px 0px 20px #e8e8e8);
+    width: 100%;
+    text-align: center;
+    line-height: 1em;
+}
