--- a/shinigami.css
+++ b/shinigami.css
@@ -47,8 +47,12 @@ body {
     width: max-content;
     font-weight: 700;
 }
-.collapsible:hover {
+.active, .collapsible:hover {
   background-color: #ccc;
+}
+.content1 {
+  display: none;
+  overflow: hidden;
 }
 .slide-left {
     -webkit-animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
