--- a/shinigami.css
+++ b/shinigami.css
@@ -47,12 +47,17 @@ body {
     width: max-content;
     font-weight: 700;
 }
-.active, .collapsible:hover {
-  background-color: #ccc;
+.collapsible:active {
+  background-color: white;
+  color: black;
+}
+
+.collapsible:hover {
+  background-color: #878787;
+  color: white;
 }
 .content1 {
-  display: none;
-  overflow: hidden;
+   overflow: hidden;
 }
 .slide-left {
     -webkit-animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
