--- a/shinigami.css
+++ b/shinigami.css
@@ -67,3 +67,30 @@ body {
             opacity: 1;
   }
 }
+.button-0 {
+    font-size: 1em;
+    color: #0b0f8b;
+    border: 2px solid #0b0f8b;
+    background: #e8e8e8;
+    font-weight: bold;
+    padding: 5px;
+}
+.button-0:hov {
+    font-size: 1em;
+    color: #0b0f8b;
+    border: 2px solid #0b0f8b;
+    background: white;
+    font-weight: bold;
+    padding: 5px;
+}
+.button-0:active {
+    font-size: 1em;
+    color: white;
+    border: 2px solid #0b0f8b;
+    background: #0b0f8b;
+    font-weight: bold;
+    padding: 5px;
+}
+.button-1 {
+    font-family: monospace;
+}
