--- a/shinigami.css
+++ b/shinigami.css
@@ -75,7 +75,7 @@ body {
     font-weight: bold;
     padding: 5px;
 }
-.button-0:hov {
+.button-0:hover {
     font-size: 1em;
     color: #0b0f8b;
     border: 2px solid #0b0f8b;
