--- a/shinigami.css
+++ b/shinigami.css
@@ -45,25 +45,25 @@ body {
 }
 @-webkit-keyframes slide-left {
   0% {
-    -webkit-transform: translateX(+100px);
-            transform: translateX(+100px);
+    -webkit-transform: translateY(-100px);
+            transform: translateY(-100px);
             opacity: 0;
   }
   100% {
-    -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
             opacity: 1;
   }
 }
 @keyframes slide-left {
   0% {
-    -webkit-transform: translateX(+100px);
-            transform: translateX(+100px);
+    -webkit-transform: translateY(-100px);
+            transform: translateY(-100px);
             opacity: 0;
   }
   100% {
-    -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
             opacity: 1;
   }
 }
