--- a/shinigami.css
+++ b/shinigami.css
@@ -97,7 +97,7 @@ body {
 .warning {
     font-size: x-large;
     background: #ff6d00;
-    width: fit-content;
+    width: -webkit-fill-available;
     font-weight: bold;
     padding: 0em 2em;
 }
