--- a/shinigami.css
+++ b/shinigami.css
@@ -96,7 +96,7 @@ body {
 }
 .warning {
     font-size: x-large;
-    background: #ff6d00;
+    background: #0b0f8b;
     width: -webkit-fill-available;
     font-weight: bold;
 }
