--- a/style.css
+++ b/style.css
@@ -43,4 +43,9 @@ body {
     justify-content: center;
     align-items: center;
 }
-
+h1 {
+    color: #037603;
+    padding: 0 0 0.25em;
+    margin: 0 0 0.6em;
+    font-weight: normal;
+}
