--- a/220-21.css
+++ b/220-21.css
@@ -23,8 +23,28 @@ body {
   margin: auto;
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
+}
+.header1 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: flex-start;
+}
+.head-text1 {
+  font-size: xxx-large;
+  font-weight: bold;
+  line-height: 1em;
+}
+.head-text2 {
+  font-family: monospace;
+}
+.logo {
+  max-width: 100px;
+  margin: 0em 1.5em 0em 0.5em;
 }
           
