--- a/220-21.css
+++ b/220-21.css
@@ -24,7 +24,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
 }
 .header1 {
@@ -42,6 +42,13 @@ body {
 }
 .head-text2 {
   font-family: monospace;
+}
+.site-78n-notice {
+  font-size: x-large;
+  border-left: 2px white solid;
+  text-align-last: center;
+  font-variant-caps: small-caps;
+  padding: 0 1em;
 }
 .logo {
   max-width: 100px;
