--- a/220-21.css
+++ b/220-21.css
@@ -16,7 +16,13 @@ body {
  min-height: 800px;
  box-shadow: #141414 0px 3px 20px 10px;
 }
-
+h1 {
+  margin-bottom: 1.3em !important;
+  margin-top: 0;
+  font-size: 230%;
+  font-weight: 500;
+  font-variant: petite-caps;
+}
 .header {
   max-width: 1200px;
   height: 17.5em;
