--- a/220-21.css
+++ b/220-21.css
@@ -8,11 +8,15 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
-
+.license {
+  background: #353434;
+  text-align: center;
+  margin-bottom: 3em;
+}
 .document {
  background: #272525;
  max-width: 1200px;
- margin: auto auto 5em;
+ margin: auto;
  min-height: 800px;
  box-shadow: #141414 0px 3px 20px 10px;
 }
