--- a/220-21.css
+++ b/220-21.css
@@ -11,7 +11,9 @@ body {
 .license {
   background: #353434;
   text-align: center;
-  margin-bottom: 3em;
+  max-width: 1200px;
+  margin: 0 auto 3em auto;
+  padding: 3.33em 0;
 }
 .document {
  background: #272525;
