--- a/220-21.css
+++ b/220-21.css
@@ -31,7 +31,7 @@ a:active {
     border-top: 2px solid #525151;
     padding: 1.2em 0;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
