--- a/220-21.css
+++ b/220-21.css
@@ -26,6 +26,7 @@ a:active {
     border-left: 2px solid crimson;
     border-top: 0;
     border-bottom: 0;
+    font-size: 0.9em;
 }
 .license {
   background: #353434;
