--- a/220-21.css
+++ b/220-21.css
@@ -156,3 +156,14 @@ h1 {
   font-size: medium;
   font-variant-caps: normal;
 }
+.persona {
+    font-family: monospace;
+    color: white;
+    background: #3e3e3e;
+    border: #525151 2px solid;
+    margin-top: 1em;
+    margin-bottom: 2em;
+    padding: 0.5em;
+    text-align: center;
+    border-radius: 10px;
+  }
