--- a/XXX.css
+++ b/XXX.css
@@ -9,6 +9,17 @@ body {
   background-position-y: center;
 
 }
+
+.noise {
+    width: 100%;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-attachment: fixed;
+    opacity: 10%;
+    background-image: Url(https://64.media.tumblr.com/tumblr_lwuf26MDND1qg39ewo1_500.gifv);
+}
 .XXX {
     max-width: 90%;
     margin: auto;
