--- a/220-21.css
+++ b/220-21.css
@@ -177,6 +177,6 @@ h1 {
     background: #cccccc;
     color: black;
     padding: 1em;
-    font: small-caption;
+    font-family: monospace;
     margin: 1.5em 0;
 }
