--- a/220-21.css
+++ b/220-21.css
@@ -197,6 +197,7 @@ h1 {
     background: #181818;
     background-blend-mode: darken;
     padding: 0.5em;
+    margin: 1em 0;
     background-size: cover;
     background-image: url(https://static.vecteezy.com/system/resources/previews/006/893/584/non_2x/textured-crumpled-black-paper-background-free-photo.jpg);
 }
