--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ h1 {
     box-shadow: 0 2px 6px rgba(0, 0, 0, .5), inset 0 1px rgba(255, 255, 255, .3), inset 0 10px rgba(255, 255, 255, .2), inset 0 10px 20px rgba(255, 255, 255, .25), inset 0 -15px 30px rgba(0, 0, 0, .1);
 }
 .hub {
-    text-align: center
+    text-align: center;
     color: #00aba8;
     font-size: 150%;
 }
