--- a/style.css
+++ b/style.css
@@ -65,11 +65,14 @@ h1 {
 }
 a {
     text-decoration: none;
+    color: #00aba8;
 }
 a:hover {
     text-decoration: underline;
+    color: #00aba8;
 }
 a:active {
     text-decoration: underline;
     filter: drop-shadow(1px 1px 10px grey);
+    color: #00aba8;
 }
