--- a/style.css
+++ b/style.css
@@ -77,14 +77,14 @@ a:active {
     color: #007a78;
 }
 
-/* Style the tab */
 .tab {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    border-color: #444;
+    border-width: 0 0 5px;
 }
 
-/* Style the buttons that are used to open the tab content */
 .tab button {
   background-color: inherit;
   float: left;
@@ -95,20 +95,17 @@ a:active {
   transition: 0.3s;
 }
 
-/* Change background color of buttons on hover */
 .tab button:hover {
   background-color: #ddd;
 }
 
-/* Create an active/current tablink class */
 .tab button.active {
   background-color: #ccc;
 }
-
-/* Style the tab content */
 .tabcontent {
-  display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
+    display: none;
+    border: 1px solid #808080;
+    padding: 0.25em 0.5em;
+    background-color: #f5f5f5;
+    border-top: none;
 }
