--- a/style.css
+++ b/style.css
@@ -82,17 +82,23 @@ a:active {
     border: 1px solid #ccc;
     background-color: #f1f1f1;
     border-color: #444;
+    display: flex;
     border-width: 0 0 5px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: flex-end;
+    justify-content: flex-start;
 }
 
 .tab button {
   background-color: inherit;
+  background: linear-gradient(0deg, #d1d1d1, transparent);
   float: left;
   border: none;
   outline: none;
   cursor: pointer;
   padding: 14px 16px;
-  transition: 0.3s;
+  transition: 0.1s;
 }
 
 .tab button:hover {
@@ -100,7 +106,11 @@ a:active {
 }
 
 .tab button.active {
-  background-color: #ccc;
+    background: #00817e;
+    color: white;
+    font-weight: bolder;
+    border: 1px #243356 solid;
+    padding: 0.35em 0.75em;
 }
 .tabcontent {
     display: none;
