--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ a:active {
 .tab {
     overflow: hidden;
     border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    background-color: transparent;
     border-color: #444;
     display: flex;
     border-width: 0 0 5px;
