--- a/scp-351-n.css
+++ b/scp-351-n.css
@@ -120,3 +120,11 @@ a:active {
     background-color: #f5f5f5;
     border-top: none;
 }
+.apcs-container {
+    border: 1px solid #ccc;
+    background: white;
+    color: black;
+    padding-bottom: 30px;
+    font-family: Oswald, sans-serif;
+    position: relative;
+}
