--- a/scp-351-n.css
+++ b/scp-351-n.css
@@ -172,7 +172,7 @@ a:active {
     position: relative;
 }
 .apcs-class {
-    background: #4e6c77;
+    background: #0f0376;
     width: 100px;
     height: 90px;
     display: flex;
