--- a/scp-351-n.css
+++ b/scp-351-n.css
@@ -182,5 +182,7 @@ a:active {
     line-height: 0;
     flex-shrink: 0;
     color: white;
-    position: relative;
+    position: absolute;
+    top: 15px;
+    right: 10px;
 }
