--- a/scp-351-n.css
+++ b/scp-351-n.css
@@ -175,7 +175,6 @@ a:active {
     width: 100px;
     height: 90px;
     display: flex;
-    align-items: center;
     justify-content: center;
     font-size: 64px;
     line-height: 0;
@@ -184,4 +183,7 @@ a:active {
     position: absolute;
     top: 15px;
     right: 10px;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: column;
 }
