--- a/scp-351-n.css
+++ b/scp-351-n.css
@@ -187,3 +187,57 @@ a:active {
     align-items: center;
     flex-direction: column;
 }
+.apcs-info {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 30px;
+    display: flex;
+    align-items: stretch;
+    background: var(--apcs-info-bg-color);
+    color: var(--apcs-info-fg-color);
+    clip-path: polygon(30px 0, 100% 0, 100% 100%, 0 100%);
+    font-size: 18px;
+    line-height: 18px;
+    pointer-events: none;
+    max-width: 100%;
+    white-space: nowrap;
+}
+.apcs-info-activation {
+    width: 328px;
+    padding: 0 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.apcs-info-risk {
+    clip-path: polygon(30px 0, 100% 0, calc(100% - 30px) 100%, 0 100%);
+    padding: 0 30px;
+    margin-left: -30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 128px;
+    position: relative;
+    color: black;
+}
+.apcs-info-vedist {
+    background: #505052;
+    clip-path: polygon(30px 0, 100% 0, calc(100% - 30px) 100%, 0 100%);
+    padding: 0 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    width: 128px;
+    margin-left: -31px;
+    position: relative;
+}
+.apcs-info-number {
+    width: 162px;
+    padding-left: 15px;
+    margin-left: -30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
