--- a/scp-351-n.css
+++ b/scp-351-n.css
@@ -204,11 +204,12 @@ a:active {
     white-space: nowrap;
 }
 .apcs-info-activation {
-    width: 328px;
+    width: 110px;
     padding: 0 30px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background: #e7e7e7;
 }
 .apcs-info-risk {
     clip-path: polygon(30px 0, 100% 0, calc(100% - 30px) 100%, 0 100%);
@@ -217,9 +218,10 @@ a:active {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 128px;
+    width: 110px;
     position: relative;
     color: black;
+    background: #e7e7e7;
 }
 .apcs-info-vedist {
     background: #505052;
@@ -229,15 +231,16 @@ a:active {
     align-items: center;
     justify-content: center;
     color: white;
-    width: 128px;
+    width: 110px;
     margin-left: -31px;
     position: relative;
 }
 .apcs-info-number {
-    width: 162px;
+    width: 200px;
     padding-left: 15px;
     margin-left: -30px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background: #e7e7e7;
 }
