--- a/scp-351-n.css
+++ b/scp-351-n.css
@@ -221,7 +221,7 @@ a:active {
     width: 110px;
     position: relative;
     color: black;
-    background: #e7e7e7;
+    background: #bfbfbf;
 }
 .apcs-info-vedist {
     background: #505052;
