--- a/code-pink.css
+++ b/code-pink.css
@@ -1,15 +1,15 @@
 body {
-  margin: 20px;
-  font-family: system-ui;
-  background-image: url(https://i.ibb.co/kKncF6p/body-bg.png);
-  background-repeat-y: no-repeat;
+    margin: 20px;
+    font-family: system-ui;
+    background-image: url(https://files.scpfoundation.net/local--files/theme:classic/classic_body_bg.png);
+    background-repeat-y: no-repeat;
 }
 .text-header {
     color: white;
-    font-size: 250%;
+    font-size: 160%;
     font-variant-caps: petite-caps;
     font-weight: 600;
-    text-shadow: 0 0 20px #00ff3c;
+    text-shadow: 0 0 20px #000000;
     filter: drop-shadow(0px 4px 2px black);
 }
 .header-flex {
@@ -21,7 +21,7 @@ body {
 .text-header1 {
     font-family: monospace;
     font-weight: bold;
-    color: #f0f0c0;
+    color: white;
     font-size: large;
     text-shadow: 1px 1px 3px black;
 }
@@ -44,7 +44,7 @@ body {
     align-items: center;
 }
 h1 {
-    color: #037603;
+    color: #424242;
     padding: 0 0 0.25em;
     margin: 0 0 0.6em;
     font-weight: normal;
