--- a/code-pink.css
+++ b/code-pink.css
@@ -9,7 +9,6 @@ body {
     font-size: 160%;
     font-variant-caps: petite-caps;
     font-weight: 600;
-    text-shadow: 0 0 20px #000000;
     filter: drop-shadow(0px 4px 2px black);
 }
 .header-flex {
@@ -23,7 +22,7 @@ body {
     font-weight: bold;
     color: white;
     font-size: large;
-    text-shadow: 1px 1px 3px black;
+    filter: drop-shadow(0px 4px 2px black);
 }
 .logo-header {
     width: 100px;
@@ -33,6 +32,7 @@ body {
     padding: 1px 15px;
     max-width: 800px;
     margin: auto;
+    filter: drop-shadow(0px 2px 9px black);
     height: 130px;
     text-align: center;
     margin-bottom: 40px;
