--- a/scp-939-s-ex.css
+++ b/scp-939-s-ex.css
@@ -236,7 +236,7 @@ a:active {
     width: 110px;
     position: relative;
     color: black;
-    background: #bfbfbf;
+    background: #ffc000;
 }
 .apcs-info-vedist {
     background: #505052;
