--- a/scp-939-s-ex.css
+++ b/scp-939-s-ex.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@300&display=swap');
+
 body {
     margin: 20px;
     font-family: system-ui;
