--- a/code-pink.css
+++ b/code-pink.css
@@ -73,7 +73,6 @@ a:hover {
 }
 a:active {
     text-decoration: underline;
-    filter: drop-shadow(1px 1px 10px grey);
     color: #a5001f;
 }
 
@@ -124,7 +123,7 @@ a:active {
 }
 .pink {
     color: white;
-    background: magenta;
+    background: #FF1493;
     font-weight: bolder;
     padding: 0.2em 1em;
     margin: 0em 1em 0 0;
