--- a/scp-939-s-ex.css
+++ b/scp-939-s-ex.css
@@ -24,7 +24,7 @@ body {
     font-family: monospace;
     font-weight: bold;
     color: white;
-    content: Sex Curious Projects;
+    content: 'Sex Curious Projects';
     font-size: large;
     filter: drop-shadow(0px 4px 2px black);
 }
