--- a/scp-939-s-ex.css
+++ b/scp-939-s-ex.css
@@ -264,3 +264,21 @@ a:active {
     justify-content: center;
     background: #e7e7e7;
 }
+.rimg {
+    float: right;
+    border: solid 1px #666;
+    text-align: center;
+    font-size: 8pt;
+    font-weight: bold;
+    background: #EEE;
+    margin: 10px auto 5px 8px;
+    box-shadow: 0 1px 6px rgba(0,0,0,.25);
+    width: 30%;
+}
+.quote {
+    border: 1px dashed #999;
+    padding: 0 1em;
+    background-color: #f4f4f4;
+    margin: 0 1em;
+    font-style: italic;
+}
