--- a/scp-939-s-ex.css
+++ b/scp-939-s-ex.css
@@ -277,7 +277,7 @@ a:active {
 }
 .quote {
     border: 1px dashed #999;
-    padding: 0 1em;
+    padding: 0.5em 1em;
     background-color: #f4f4f4;
     margin: 0 1em;
     font-style: italic;
