--- a/scp-939-s-ex.css
+++ b/scp-939-s-ex.css
@@ -279,6 +279,6 @@ a:active {
     border: 1px dashed #999;
     padding: 0.5em 1em;
     background-color: #f4f4f4;
-    margin: 0 1em;
+    margin: 1em 0em;
     font-style: italic;
 }
