--- a/code-pink.css
+++ b/code-pink.css
@@ -156,3 +156,9 @@ a:active {
     font-weight: bolder;
     color: crimson;
 }
+.thanks {
+    background: aliceblue;
+    padding: 0.3em 1em;
+    font-size: 90%;
+    margin: 1.5em 0;
+}
