--- a/code-pink.css
+++ b/code-pink.css
@@ -203,10 +203,10 @@ a:active {
     font-weight: bolder;
 }
 
-thanks p {
+.story-center p {
     display: block;
-    margin-block-start: 0.49em;
-    margin-block-end: 0.49em;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
 }
