--- a/flx-hrp/style.css
+++ b/flx-hrp/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 20px;
   font-family: system-ui;
-  background-image: url(https://i.ibb.co/kKncF6p/body-bg.png);
+  background-image: url(https://i.ibb.co/bH8dsnM/body-bg.png);
   background-repeat-y: no-repeat;
 }
 .text-header {
