--- a/flx-hrp/style.css
+++ b/flx-hrp/style.css
@@ -5,12 +5,10 @@ body {
   background-repeat-y: no-repeat;
 }
 .text-header {
-    color: white;
-    font-size: 150%;
+    color: black;
+    font-size: 160%;
     font-variant-caps: petite-caps;
     font-weight: 600;
-    text-shadow: 0 0 20px #00ff3c;
-    filter: drop-shadow(0px 4px 2px black);
 }
 .header-flex {
     display: flex;
@@ -21,8 +19,8 @@ body {
 .text-header1 {
     font-family: monospace;
     font-weight: bold;
-    color: #f0f0c0;
-    font-size: large;
+    color: #ffffff;
+    font-size: 110%;
     text-shadow: 1px 1px 3px black;
 }
 .logo-header {
@@ -44,7 +42,7 @@ body {
     align-items: center;
 }
 h1 {
-    color: #037603;
+    color: darkblue;
     padding: 0 0 0.25em;
     margin: 0 0 0.6em;
     font-weight: normal;
