--- a/flx-hrp/style.css
+++ b/flx-hrp/style.css
@@ -4,6 +4,10 @@ body {
   background-image: url(https://i.ibb.co/bH8dsnM/body-bg.png);
   background-repeat-y: no-repeat;
 }
+::selection {
+    background: darkblue;
+    color: white !important;
+}
 .text-header {
     color: black;
     font-size: 160%;
