--- a/flx-hrp/style.css
+++ b/flx-hrp/style.css
@@ -8,6 +8,11 @@ body {
     background: darkblue;
     color: white !important;
 }
+.scp-class {
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 25px;
+}
 .text-header {
     color: black;
     font-size: 160%;
