--- a/flx-hrp/style.css
+++ b/flx-hrp/style.css
@@ -72,16 +72,17 @@ h1 {
 }
 a {
     text-decoration: none;
-    color: #00aba8;
+    color: darkblue;
 }
 a:hover {
     text-decoration: underline;
-    color: #00aba8;
+    color: black;
 }
 a:active {
     text-decoration: underline;
-    filter: drop-shadow(1px 1px 10px grey);
-    color: #007a78;
+    filter: drop-shadow(0px 0px 1px black);
+    color: white;
+    text-shadow: 1px 1px 1px black;
 }
 
 .tab {
