--- a/flx-hrp/style.css
+++ b/flx-hrp/style.css
@@ -130,3 +130,12 @@ a:active {
     background-color: #f5f5f5;
     border-top: none;
 }
+.armed-forces {
+    background: ghostwhite;
+    color: black;
+    font-weight: 800;
+    padding: 10px;
+    font-family: monospace;
+    margin: 1em;
+    border: double white 4px;
+}
