--- a/flx-hrp/style.css
+++ b/flx-hrp/style.css
@@ -131,11 +131,14 @@ a:active {
     border-top: none;
 }
 .armed-forces {
-    background: ghostwhite;
+    background: whitesmoke;
     color: black;
     font-weight: 800;
     padding: 10px;
     font-family: monospace;
-    margin: 1em;
-    border: double white 4px;
+    margin: 1em 0;
+}
+.armed-forces h3 {
+    margin-block-start: 0 !important;
+    margin-block-end: 0.8em !important;
 }
