--- a/flx-hrp/mod.css
+++ b/flx-hrp/mod.css
@@ -1,14 +1,15 @@
 body {
-  margin: 20px;
-  font-family: system-ui;
-  background-image: url(https://i.ibb.co/bH8dsnM/body-bg.png);
-  background-repeat-y: no-repeat;
+    margin: 20px;
+    font-family: system-ui;
+    background: antiquewhite;
 }
 ::selection {
     background: darkblue;
     color: white !important;
 }
-
+.header {
+    height: 200px;
+}
 .sub-head {
     max-width: 1200px;
     margin: auto;
