--- a/flx-hrp/mod.css
+++ b/flx-hrp/mod.css
@@ -10,6 +10,11 @@ body {
 .header {
     height: 200px;
 }
+.main-holder {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
 .sub-head {
     max-width: 1200px;
     margin: auto;
@@ -37,12 +42,19 @@ body {
     color: silver;
     text-shadow: 1px 1px 1px #363636;
 }
-.text-holder-2 
+.text-holder-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    flex-direction: row;
+}
 .text-3 {
     font-size: 130%;
     font-family: initial;
+    text-align: end;
     color: silver;
-    text-shadow: 2px 2px 1px black;
+    text-shadow: 2px 2px 3px black;
 }
 .head-logo {
     width: 150px;
