--- a/flx-hrp/mod.css
+++ b/flx-hrp/mod.css
@@ -8,7 +8,12 @@ body {
     color: white !important;
 }
 .header {
-    height: 200px;
+    height: max-content;
+    background: url(https://upload.wikimedia.org/wikipedia/commons/4/4d/Woodland_EMR_camo_of_the_Russian_Armed_Forces.png);
+    margin: -20px -20px 0;
+    padding: 20px 20px 10px;
+    border-bottom: 20px solid silver;
+    background-attachment: fixed;
 }
 .main-holder {
     display: flex;
@@ -20,7 +25,7 @@ body {
     margin: auto;
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: space-evenly;
 }
 .text-holder-1 {
