--- a/flx-hrp/mod.css
+++ b/flx-hrp/mod.css
@@ -35,6 +35,7 @@ h1 {
 }
 .text-holder-1 {
     display: flex;
+    text-align: center;
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: center;
