--- a/flx-hrp/mod.css
+++ b/flx-hrp/mod.css
@@ -31,7 +31,7 @@ h1 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 .text-holder-1 {
     display: flex;
@@ -58,12 +58,13 @@ h1 {
     justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
+    width: 20em;
     flex-direction: row;
 }
 .text-3 {
-    font-size: 130%;
+    font-size: 150%;
     font-family: initial;
-    text-align: end;
+    text-align: center;
     color: silver;
     text-shadow: 2px 2px 3px black;
 }
