--- a/flx-hrp/mod.css
+++ b/flx-hrp/mod.css
@@ -17,7 +17,7 @@ h1 {
     background: url(https://upload.wikimedia.org/wikipedia/commons/4/4d/Woodland_EMR_camo_of_the_Russian_Armed_Forces.png);
     margin: -20px -20px 0;
     padding: 20px 20px 10px;
-    border-bottom: 20px solid silver;
+    border-bottom: 10px solid #ffd69f;
     background-attachment: fixed;
 }
 .main-holder {
