--- a/flx-hrp/style.css
+++ b/flx-hrp/style.css
@@ -142,3 +142,14 @@ a:active {
     margin-block-start: 0 !important;
     margin-block-end: 0.8em !important;
 }
+.image-holder {
+    max-width: 20%;
+    float: right;
+    margin: 1em;
+    border: 2px solid;
+    font-family: monospace;
+    padding: 10px;
+    text-align: center;
+    background: white;
+    font-weight: bolder;
+}
