--- a/nsfw-hub/code-pink.css
+++ b/nsfw-hub/code-pink.css
@@ -209,3 +209,14 @@ a:active {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
 }
+.image-container {
+    float: right;
+    width: 320px;
+    margin: 1em 1em 1em 4em;
+}
+@media screen and (min-width: 0px) and (max-width: 570px) {
+    .image-container {
+    float: none;
+    width: -webkit-fill-available;
+    margin: 1em auto;
+    }
