--- a/nsfw-hub/scp-939-s-ex.css
+++ b/nsfw-hub/scp-939-s-ex.css
@@ -302,3 +302,15 @@ a:active {
     text-decoration: underline;
 }
 
+.image-container {
+    float: right;
+    width: 320px;
+    margin: 1em 1em 1em 4em;
+}
+@media screen and (min-width: 0px) and (max-width: 570px) {
+    .image-container {
+    float: none;
+    width: -webkit-fill-available;
+    margin: 1em auto;
+    }
+}
