--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 20px;
   font-family: system-ui;
   background-image: url(https://i.ibb.co/kKncF6p/body-bg.png);
-  background-repeat-y: no-repeat;
+  background-repeat: repeat no-repeat;
 }
 .text-header {
     color: white;
