--- a/icr-hub/icr-style.css
+++ b/icr-hub/icr-style.css
@@ -4,6 +4,12 @@ body {
   background-color: linear-gradient(180deg, transparent 0%, #ffffff 100%);
   background-image: url(https://i.ibb.co/MD1MCzg/menuwhite.jpg);
 }
+main {
+    max-width: 900px;
+    color: black;
+    background: white;
+    margin: 2em auto;
+}
 .text-header {
     color: white;
     font-size: 250%;
