--- a/icr-hub/icr-style.css
+++ b/icr-hub/icr-style.css
@@ -50,7 +50,7 @@ main {
     align-items: center;
 }
 h1 {
-    color: #037603;
+    color: orangered;
     padding: 0 0 0.25em;
     margin: 0 0 0.6em;
     font-weight: normal;
