--- a/icr-hub/icr-style.css
+++ b/icr-hub/icr-style.css
@@ -4,7 +4,7 @@ body {
   background-image: url(https://i.ibb.co/MD1MCzg/menuwhite.jpg);
 }
 .body {
-    background: linear-gradient(180deg, transparent 0%, #ffffff 20%);
+    background: linear-gradient(180deg, transparent 0%, #ffffff 10em);
     position: fixed;
     width: -webkit-fill-available;
     height: -webkit-fill-available;
@@ -19,44 +19,8 @@ main {
     margin: 2em auto;
     padding: 1em;
 }
-.text-header {
-    color: white;
-    font-size: 250%;
-    font-variant-caps: petite-caps;
-    font-weight: 600;
-    text-shadow: 0 0 20px #00ff3c;
-    filter: drop-shadow(0px 4px 2px black);
-}
-.header-flex {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-items: flex-start;
-}
-.text-header1 {
-    font-family: monospace;
-    font-weight: bold;
-    color: #f0f0c0;
-    font-size: large;
-    text-shadow: 1px 1px 3px black;
-}
-.logo-header {
-    width: 100px;
-    margin: 1em;
-}
-.header {
-    padding: 1px 15px;
-    max-width: 800px;
-    margin: auto;
-    height: 130px;
-    text-align: center;
-    margin-bottom: 40px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
+header {
+    
 }
 h1 {
     color: orangered;
