--- a/icr-hub/icr-style.css
+++ b/icr-hub/icr-style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+
 body {
   margin: 0px;
   font-family: system-ui;
@@ -20,7 +22,28 @@ main {
     padding: 1em;
 }
 header {
-    
+    max-width: 800px;
+    margin: 1em auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: flex-start;
+}
+.logo {
+    width: 120px;
+}
+.text-holder {
+    margin: 0 1em;
+}
+.text1 {
+    font-size: xxx-large;
+    font-weight: bold;
+    font-family: 'Comfortaa', sans-serif;
+}
+.text2 {
+    font-style: italic;
+    font-size: smaller;
 }
 h1 {
     color: orangered;
