--- a/icr-hub/icr-style.css
+++ b/icr-hub/icr-style.css
@@ -52,6 +52,12 @@ h1 {
     font-weight: normal;
     border-bottom: 1px solid #bbb;
 }
+h2 {
+    margin-top: 0.7em;
+    padding: 0;
+    font-weight: bold;
+    color: orangered;
+}
 .box {
     border: solid 1px #888880;
     border-radius: 10px;
