--- a/icr-hub/icr-style.css
+++ b/icr-hub/icr-style.css
@@ -68,6 +68,7 @@ h2 {
     font-size: x-large;
     font-family: revert;
     font-weight: 500;
+    text-align: center;
 }
 .s {
     font-size: x-large;
@@ -162,7 +163,7 @@ a:active {
     justify-content: space-evenly;
 }
 
-@media screen and (min-width: 0px) and (max-width: 570px) and (orientation: portrait) {
+@media screen and (min-width: 0px) and (max-width: 570px) {
     .map {
     float: none;
     width: 95%;
