--- a/icr-hub/icr-style.css
+++ b/icr-hub/icr-style.css
@@ -159,8 +159,7 @@ a:active {
 .scp-flex {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 @media screen and (min-width: 0px) and (max-width: 570px) {
