--- a/icr-hub/icr-style.css
+++ b/icr-hub/icr-style.css
@@ -161,7 +161,12 @@ a:active {
     flex-direction: row;
     flex-wrap: wrap;
 }
-
+.scp-flex2 {
+    min-width: 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 @media screen and (min-width: 0px) and (max-width: 570px) {
     .map {
     float: none;
