--- a/icr-hub/icr-style.css
+++ b/icr-hub/icr-style.css
@@ -58,6 +58,17 @@ h2 {
     font-weight: bold;
     color: orangered;
 }
+h3 {
+    display: block;
+    font-size: 1.25em;
+    margin-block-start: 1.5em;
+    margin-block-end: 0.5em;
+}
+h4 {
+    margin-block-start: 1.4em;
+    font-size: 1.1em;
+    margin-block-end: 0.7em;
+}
 .h {
     text-align: center;
     font-size: large;
