--- a/nsfw-hub/code-pink.css
+++ b/nsfw-hub/code-pink.css
@@ -2,7 +2,7 @@ body {
     margin: 20px;
     font-family: system-ui;
     background: url(https://files.scpfoundation.net/local--files/theme:classic/classic_body_bg.png) repeat-x;
-    background-repeat-y: no-repeat;
+  background-repeat: repeat no-repeat;
     overflow-y: scroll;
     background-position: top;
 }
