--- a/nsfw-hub/scp-939-s-ex.css
+++ b/nsfw-hub/scp-939-s-ex.css
@@ -5,7 +5,7 @@ body {
     margin: 20px;
     font-family: system-ui;
     background-image: url(https://files.scpfoundation.net/local--files/theme:classic/classic_body_bg.png);
-    background-repeat-y: no-repeat;
+  background-repeat: repeat no-repeat;
 }
 .text-header {
     color: white;
