--- a/aiad.css
+++ b/aiad.css
@@ -1,7 +1,22 @@
-.body {
+body {
 	background-image: url(https://files.scpfoundation.net/local--files/theme:technoblast/bg.png);
 	color: black;
 	background-color: white;
 	margin: 0;
 	padding: 1em;
+	background-repeat: repeat-x;
+}
+.header {
+    padding: 1px 15px;
+    max-width: 800px;
+    margin: auto;
+    height: 130px;
+    text-align: center;
+    margin-bottom: 40px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
 }
