--- a/aiad.css
+++ b/aiad.css
@@ -1,5 +1,5 @@
-@import(https://fonts.gstatic.com/s/russoone/v16/Z9XUDmZRWg6M1LvRYsHOz8mJ.woff2)
-@import(https://fonts.gstatic.com/s/ruda/v28/k3kKo8YQJOpFgHQ1mQ5VkEbUKaJFsh_90qmiGg.woff2)
+@import(https://fonts.gstatic.com/s/russoone/v16/Z9XUDmZRWg6M1LvRYsHOz8mJ.woff2);
+@import(https://fonts.gstatic.com/s/ruda/v28/k3kKo8YQJOpFgHQ1mQ5VkEbUKaJFsh_90qmiGg.woff2);
 
 body {
 	background-image: url(https://files.scpfoundation.net/local--files/theme:technoblast/bg.png);
