--- a/aiad.css
+++ b/aiad.css
@@ -9,19 +9,39 @@ body {
 	padding: 1em;
 	background-repeat: repeat-x;
 }
+main {
+	background-image: url(https://files.scpfoundation.net/local--files/aiad-homescreen/blue_squares_2.gif);
+    background-repeat: repeat;
+    display: block;
+    position: absolute;
+    height: 100%;
+    width: -webkit-fill-available;
+}
+article {
+	max-width: 800px;
+    margin: 1em auto;
+	background: whitesmoke;
+}
+h1 {
+	font-family: 'Russo One', sans-serif;
+    font-size: 2.1em;
+    font-weight: normal;
+    color: #013737;
+}
 .header {
-    padding: 1px 15px;
     max-width: 800px;
+    height: 160px;
     margin: auto;
-    height: 130px;
     text-align: center;
-    margin-bottom: 40px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     align-content: center;
     justify-content: center;
     align-items: center;
+}
+.logo-header {
+	max-width: 130px;
 }
 .text-header {
 	color: cyan;
