--- a/aiad.css
+++ b/aiad.css
@@ -1,5 +1,4 @@
-@import(https://fonts.gstatic.com/s/russoone/v16/Z9XUDmZRWg6M1LvRYsHOz8mJ.woff2);
-@import(https://fonts.gstatic.com/s/ruda/v28/k3kKo8YQJOpFgHQ1mQ5VkEbUKaJFsh_90qmiGg.woff2);
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Russo+One&display=swap');
 
 body {
 	background-image: url(https://files.scpfoundation.net/local--files/theme:technoblast/bg.png);
@@ -19,7 +18,8 @@ main {
 article {
 	max-width: 800px;
     margin: 1em auto;
-	background: whitesmoke;
+	background: #f5f5f5cf;
+	padding: 1em;
 }
 h1 {
 	font-family: 'Russo One', sans-serif;
