--- a/aiad.css
+++ b/aiad.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Russo+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ruda:wght@400..900&display=swap');
 
 body {
 	background-image: url(https://files.scpfoundation.net/local--files/theme:technoblast/bg.png);
