--- a/aiad.css
+++ b/aiad.css
@@ -28,6 +28,23 @@ h1 {
     font-weight: normal;
     color: #013737;
 }
+h2 {
+    font-weight: normal;
+    color: #ff9944;
+	font-family: 'Ruda', sans-serif;
+}
+h3 {
+	color: #00FFFF;
+    text-shadow: #009999 1px 1px;
+	font-family: monospace;
+    font-size: 2.1em;
+    font-weight: bold;
+}
+h4, h5, h6 {
+	color: #013737;
+    font-family: 'Russo One', sans-serif;
+    font-weight: normal;
+}
 .header {
     max-width: 800px;
     height: 161px;
